--- a/index.html
+++ b/index.html
@@ -3,59 +3,38 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Bootstrap CSS -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <title>Vitrine Client</title>
+  
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
   <style>
     body {
-      font-family: Arial, sans-serif;
       background-color: #f4f4f9;
-      margin: 0;
-      padding: 20px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    h1 {
-      color: #333;
+      font-family: Arial, sans-serif;
     }
 
     .container {
-      width: 600px;
-      background-color: #fff;
+      margin-top: 30px;
       padding: 20px;
+      background-color: #fff;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       border-radius: 8px;
-      margin-bottom: 30px;
     }
 
     canvas {
-      display: block;
-      margin: 20px auto;
       border: 1px solid #000;
+      max-width: 100%;
+      height: auto;
     }
 
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-
-    label {
+    .dimensions {
+      margin-top: 15px;
+      font-size: 16px;
       font-weight: bold;
     }
 
-    input[type="number"], input[type="color"], select {
-      padding: 10px;
-      font-size: 16px;
-      border-radius: 4px;
-      border: 1px solid #ccc;
-    }
-
     button {
-      padding: 10px;
-      font-size: 16px;
       background-color: #4CAF50;
       color: white;
       border: none;
@@ -66,62 +45,61 @@
     button:hover {
       background-color: #45a049;
     }
-
-    .dimensions {
-      display: flex;
-      justify-content: space-between;
-    }
-
-    .dimensions span {
-      font-size: 16px;
-    }
-
-    .type-selector {
-      font-size: 16px;
-    }
-
   </style>
 </head>
 <body>
-  <h1>Vitrine sur mesure</h1>
-
-  <!-- Formulaire pour choisir les caractéristiques de la vitre -->
   <div class="container">
+    <h1 class="text-center text-primary mb-4">Vitrine sur mesure</h1>
+
+    <!-- Formulaire pour choisir les caractéristiques de la vitre -->
     <form id="vitrineForm">
-      <label for="width">Largeur (cm) :</label>
-      <input type="number" id="width" name="width" min="50" max="500" required>
+      <div class="row mb-3">
+        <div class="col-md-6">
+          <label for="width" class="form-label">Largeur (cm) :</label>
+          <input type="number" id="width" name="width" min="50" max="500" class="form-control" required>
+        </div>
+        <div class="col-md-6">
+          <label for="height" class="form-label">Hauteur (cm) :</label>
+          <input type="number" id="height" name="height" min="50" max="500" class="form-control" required>
+        </div>
+      </div>
+      
+      <div class="mb-3">
+        <label for="color" class="form-label">Couleur :</label>
+        <input type="color" id="color" name="color" value="#FFFFFF" class="form-control form-control-color">
+      </div>
 
-      <label for="height">Hauteur (cm) :</label>
-      <input type="number" id="height" name="height" min="50" max="500" required>
+      <div class="mb-3">
+        <label for="type" class="form-label">Type de vitre :</label>
+        <select id="type" name="type" class="form-select">
+          <option value="full">Vitre pleine</option>
+          <option value="middle-bar">Vitre avec barre au centre</option>
+          <option value="four-panels">Vitre avec 4 parties</option>
+        </select>
+      </div>
 
-      <label for="color">Couleur :</label>
-      <input type="color" id="color" name="color" value="#FFFFFF">
-
-      <label for="type" class="type-selector">Type de vitre :</label>
-      <select id="type" name="type">
-        <option value="full">Vitre pleine</option>
-        <option value="middle-bar">Vitre avec barre au centre</option>
-        <option value="four-panels">Vitre avec 4 parties</option>
-      </select>
-
-      <button type="submit">Mettre à jour la vitrine</button>
+      <button type="submit" class="btn btn-primary w-100">Mettre à jour la vitrine</button>
     </form>
+
+    <!-- Canvas pour afficher la vitre -->
+    <div class="text-center mt-4">
+      <canvas id="glassPreview" width="500" height="300" class="img-fluid"></canvas>
+    </div>
+    
+    <!-- Dimensions affichées -->
+    <div class="dimensions text-center mt-3">
+      <span id="dimensionDisplay">Largeur: 0 cm, Hauteur: 0 cm</span>
+    </div>
   </div>
 
-  <!-- Canvas pour afficher la vitre -->
-  <canvas id="glassPreview" width="500" height="300"></canvas>
-
-  <div class="dimensions">
-    <span id="dimensionDisplay">Largeur: 0 cm, Hauteur: 0 cm</span>
-  </div>
-
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     const form = document.getElementById('vitrineForm');
     const canvas = document.getElementById('glassPreview');
     const ctx = canvas.getContext('2d');
     const dimensionDisplay = document.getElementById('dimensionDisplay');
 
-    // Fonction pour mettre à jour l'affichage de la vitre
     function updatePreview(data) {
       const { width, height, color, type } = data;
 
@@ -133,45 +111,34 @@
 
       // Dessiner la vitre
       if (type === 'full') {
-        // Vitre pleine
         ctx.fillRect(50, 50, width, height);
       } else if (type === 'middle-bar') {
-        // Vitre avec barre au centre
-        ctx.fillRect(50, 50, width, height / 2); // Partie supérieure
-        ctx.fillRect(50, 50 + height / 2, width, height / 2); // Partie inférieure
-
-        // Ajouter la barre noire au centre
-        const middleY = 50 + height / 2 - 10;
+        ctx.fillRect(50, 50, width, height / 2);
+        ctx.fillRect(50, 50 + height / 2, width, height / 2);
         ctx.fillStyle = 'black';
-        ctx.fillRect(50, middleY, width, 20);
+        ctx.fillRect(50, 50 + height / 2 - 10, width, 20);
       } else if (type === 'four-panels') {
-        // Vitre avec 4 parties égales
         const panelWidth = width / 2;
         const panelHeight = height / 2;
-        ctx.fillRect(50, 50, panelWidth, panelHeight); // Panneau supérieur gauche
-        ctx.fillRect(50 + panelWidth, 50, panelWidth, panelHeight); // Panneau supérieur droit
-        ctx.fillRect(50, 50 + panelHeight, panelWidth, panelHeight); // Panneau inférieur gauche
-        ctx.fillRect(50 + panelWidth, 50 + panelHeight, panelWidth, panelHeight); // Panneau inférieur droit
+        ctx.fillRect(50, 50, panelWidth, panelHeight);
+        ctx.fillRect(50 + panelWidth, 50, panelWidth, panelHeight);
+        ctx.fillRect(50, 50 + panelHeight, panelWidth, panelHeight);
+        ctx.fillRect(50 + panelWidth, 50 + panelHeight, panelWidth, panelHeight);
       }
 
-      // Afficher les dimensions dans la page
       dimensionDisplay.textContent = `Largeur: ${width} cm, Hauteur: ${height} cm`;
     }
 
-    // Gérer la soumission du formulaire
     form.addEventListener('submit', (e) => {
-      e.preventDefault(); // Empêcher le rechargement de la page
+      e.preventDefault();
 
-      // Récupérer les données du formulaire
       const width = parseInt(document.getElementById('width').value);
       const height = parseInt(document.getElementById('height').value);
       const color = document.getElementById('color').value;
       const type = document.getElementById('type').value;
 
-      // Mettre à jour l'affichage de la vitre avec les nouvelles données
       updatePreview({ width, height, color, type });
     });
   </script>
-
 </body>
 </html>
